<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/menu_background"
    android:fadingEdgeLength="10dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.idi.sweet_asteroids.MainMenuActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/titleApp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bPlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/play" />

    <Button
        android:id="@+id/bOptions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/options" />

    <Button
        android:id="@+id/bTutorial"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/howto" />

    <Button
        android:id="@+id/bExit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

</LinearLayout>
